@@ -1,3 +1,7 @@
+2002-11-27  Ulrich Drepper  <drepper@redhat.com>
+
+	* sysdeps/x86_64/tls.h: New file.
+
 2002-11-26  Ulrich Drepper  <drepper@redhat.com>
 
 	* sysdeps/i386/tls.h (THREAD_GETMEM_NC): Change interface.  It now
